# intervention-faithfulness

./: .gitignore  CHANGELOG.md  LICENSE  README.md
docs/: CLI.md  DESIGN.md  SIGMA2_I_0001.md  TODO.md  api_overview.md  plugin_spec.md
intervention_faithfulness/: ARCHITECTURE.md  CERTIFICATION.md  __init__.py  __main__.py  cli.py  pyproject.toml
intervention_faithfulness/core/: FaithfulnessTest.py  METHODS.md  METHODS.tex  __init__.py  fracture.py  guard.py  maps.py  recommendation.py  reporting.py  schema.py
intervention_faithfulness/plugins/: __init__.py  registry.py
intervention_faithfulness/plugins/data/: __init__.py  faithful_synthetic.py  nanowire_switching.py  sigma2i_unfaithful_cut_linear.py  unfaithful_cut_synthetic.py
intervention_faithfulness/plugins/features/: __init__.py  ewma_dissipation.py  integrated_current.py  prev_switch_count.py  time_since_last.py
tests/: README.md  conftest.py  pytest.ini  test_cli_guard_exit_codes.py  test_cli_md_compliance.py  test_export_artifacts.py  test_export_csv.py  test_faithfulness_maps.py  test_faithfulness_maps_categorical.py  test_faithfulness_test_smoke.py  test_guard_integration.py  test_hashing.py  test_maps_categorical_smoke.py  test_maps_min_samples_nan.py  test_maps_pass_through.py  test_negative_control_plugin.py  test_pedagogical_rc_plugin.py  test_recommendations_baseline.py  test_recommendations_greedy.py  test_registry.py  test_safe_envelope.py  test_safe_envelope_table.py  test_schema.py  test_sigma2I_0001_unfaithful_cut_guard.py  test_sigma2I_battery_synthetic.py  test_sigma2I_guard_policy.py
tools/: README.md  s0001_sigma2_i_guard_harness.py
tutorials/: faq.md  glossary.md  index.md  negative_controls.md  plugins.md  quickstart.md  troubleshooting.md  workflows.md
